#ifndef LIBOTOCURL_OPTION_OPTION_HPP
#define LIBOTOCURL_OPTION_OPTION_HPP

namespace otocurl::option {

    /**
     * @brief: Abstract wrapper for an arbitrary CURLOPT
     * 
     * @details
     * Patterns:
     *  - Command
     *  - Component & leaf of the composite pattern
     *  - Non virtual interface
     */
    class Option {

    public:
        /**
         * @brief Virtual default destructor
         */
        virtual ~Option() = default;

        /**
         * @brief Command method to set the specific command
         * 
         * @details Calls virtual function `doSet()`
         */
        void set();

        /**
         * @brief Pure virtual command method to perform the actual setting of an option
         * 
         * Overriden in concrete commands (options)
         */
        virtual void doSet() = 0;

    };

}

#endif