@startuml option-class-diagram

title libotocurl Option Class Diagram

package option {

    interface "Option" as CurlOption {
        == public ==
        + set() : void      
    }

    class "OptionFactory" as CurlOptionFactory {
        == public ==
        + createCollection() : OptionCollection*
        + create<<Option1>>() : <<Option1>>*
        + create<<Option2>>() : <<Option2>>*
        + create<<Option3>>() : <<Option3>>*
        + create<<Option4>>() : <<Option4>>*
        == private ==
        - curlInterface : wrapper::Easy&
    }

    class "Invoker" as CurlOptionInvoker {
        == public ==
        + set(Option) : void 
        + undo() : void
        + redo() : void
        == private ==
        - undoStack : UndoableOption[]
        - redoStack : UndoableOption[]
    }

    abstract class "ResettableOption<T>" as CurlResettableOption {
        == public ==
        + ResettableOption()
        + ResettableOption(T)
        ..
        + set() : void
        + reset() : void
        == private ==
        - resetValue : T
        - {abstract} setTo(T) : void
    }
    
    interface "UndoableOption<T>" as CurlUndoableOption {
        == public ==
        + set() : void
        + undo() : void
    }

    abstract class "UndoableOptionImpl<T>" as CurlUndoableOptionImpl {
        == public ==
        + set() : void
        + undo() : void  
        == private ==
        - previous : T
        - {abstract} setTo(T) : void
        - {abstract} getTargetValue() : T
    }

    class "OptionCollection" as CurlOptionCollection {
        == public ==
        + set() : void
        + add(Option) : void
        + clear() : void
        == private ==
        - options : Option[]
    }
    class "<<Option1>>" as CurlConcreteOption1 {
        == public ==
        <<Option1>>(wrapper::Easy, bool)
        ..
        + set() : void
        == private ==
        - curlInterface : wrapper::Easy&
        - value : string
    }
    class "<<Option2>>" as CurlConcreteOption2 {
        == public ==
        <<Option2>>(wrapper::Easy, bool)
        <<Option2>>(wrapper::Easy, bool, bool)
        ..
        + set() : void
        + reset() : void
        == private ==
        - curlInterface : wrapper::Easy&
        - value : bool
        - setTo(bool) : void
    }
    class "<<Option3>>" as CurlConcreteOption3 {
        == public ==
        <<Option3>>(wrapper::Easy, A)
        <<Option3>>(wrapper::Easy, A, A)
        ..
        + set() : void
        + undo() : void
        + reset() : void
        == private ==
        - curlInterface : wrapper::Easy&
        - value : A
        - setTo(A) : void
        - getTargetValue() : A
    }
    class "<<Option4>>" as CurlConcreteOption4 {
        == public ==
        <<Option4>>(wrapper::Easy, string)
        ..
        + set() : void
        + undo() : void
        - curlInterface : wrapper::Easy&
        == private ==
        - value : string
        - setTo(string) : void
        - getTargetValue() : string
    }
}

package wrapper {
    class Easy
    hide Easy attributes
    hide Easy methods
}

CurlOptionCollection .|> CurlOption
CurlOptionCollection o- "*" CurlOption

CurlOption <|. CurlResettableOption 
CurlOption <|. CurlUndoableOption
CurlUndoableOption <|. CurlUndoableOptionImpl

CurlOption <|.. CurlConcreteOption1
CurlResettableOption <|-- CurlConcreteOption2
CurlResettableOption <|-- CurlConcreteOption3
CurlUndoableOptionImpl <|-- CurlConcreteOption3
CurlUndoableOptionImpl <|- CurlConcreteOption4

CurlOptionCollection <-- "creates" CurlOptionFactory
CurlConcreteOption1 <-- "creates" CurlOptionFactory
CurlConcreteOption2 <-- "creates" CurlOptionFactory
CurlConcreteOption3 <-- "creates" CurlOptionFactory
CurlConcreteOption4 <-- "creates" CurlOptionFactory

CurlOptionInvoker --> CurlOption
CurlOptionInvoker o-- "*" CurlUndoableOption

option --> Easy

@enduml